# mini_vi_slam

./: .gitignore  CMakeLists.txt  eval_pre_int.py
apps/: backend.cc  frontend.cc
cmake/modules/: FindCeres.cmake
config/: test.yaml  vio_simulation.yaml
lib/: reprojection_error.h
test/: CMakeLists.txt  Untitled-1.cpp  backend_triangularization.cc  backend_v_02.cc  evaluate.py
